--- a/snakegame.html
+++ b/snakegame.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <canvas id="gameCanvas" width="400" height="400"></canvas>
+
+  <div id="score">0</div>
+  <canvas id="snakeboard" width="400" height="400"></canvas>
 
   <style>
     #snakeboard {
@@ -17,8 +19,12 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
-  </style>
 
+    #score {
+      text-align: center;
+      font-size: 140px;
+    }
+  </style>
 
   <script src='../javascript/script.js'></script>
 </body>
